--- a/app/src/main/res/layout/person_item_layout.xml
+++ b/app/src/main/res/layout/person_item_layout.xml
@@ -9,7 +9,8 @@
         android:layout_height="70dip"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:contentDescription="@string/photoImageViewDescription"/>
 
     <TextView
         android:id="@+id/nameTextView"
